# MCZI

./: .gitignore  Cargo.toml  README.md
bench/: minimizer_count.rs  minimizer_scan.rs  phase12.rs  run_kmc_time_pidstat.sh  run_mc_profile.sh  run_mc_time_pidstat.sh  simulate_long_reads.rs  simulate_reads_from_genome.rs
src/: lib.rs  main.rs  mczi.rs  r.rs  zi.rs
