[package]
name = "mc"
version = "0.1.0"
edition = "2024"
description = "A parallel two-pass pseudo k-mer counter using minimizer pre-counting."
license = "MIT"

[[bin]]
name = "MC"
path = "src/main.rs"

[[bin]]
name = "ZI"
path = "src/zi.rs"

[[bin]]
name = "MCZI"
path = "src/mczi.rs"

[[bin]]
name = "mc-minimizer-scan"
path = "bench/minimizer_scan.rs"

[[bin]]
name = "mc-minimizer-count"
path = "bench/minimizer_count.rs"

[[bin]]
name = "mc-phase12"
path = "bench/phase12.rs"

[[bin]]
name = "simulate-reads-from-genome"
path = "bench/simulate_reads_from_genome.rs"

[dependencies]
ahash = "0.8"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.1", features = ["zlib-rs"] }
helicase = { version = "0.1.1", default-features = false, features = ["packed-seq", "gz", "zstd"] }
liblzma = "0.3.6"
rayon = "1.11"
simd-minimizers = "2.3.1"
sshash-lib = "0.5.0"
zstd = "0.13"

[patch.crates-io]
simd-minimizers = { path = "vendor/simd-minimizers-2.3.1" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false

[profile.bench]
inherits = "release"

[profile.profiling]
inherits = "release"
debug = 1
strip = false
